1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* proc.h: Add #include <sys/mman.h>.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* info.c: Add #include <sys/mman.h> for munmap decl.
	* mgt.c: Likewise.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* info.c (get_string_array): Use mmap instead of vm_allocate.
	(S_proc_getprocinfo): Likewise.
	(S_proc_getloginpids): Likewise.
	* mgt.c (S_proc_getallpids): Likewise.
	* pgrp.c (S_proc_getsessionpids): Likewise.
	(S_proc_getsessionpgids): Likewise.
	(S_proc_getpgrppids): Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* info.c (get_string): Use munmap instead of vm_deallocate.
	(get_vector): Likewise.
	(get_string_array): Likewise.
	(S_proc_getprocinfo): Likewise.
	* mgt.c (S_proc_reauthenticate): Likewise.
	(S_proc_dostop): Likewise.
	(add_tasks): Likewise.

1999-06-19  Roland McGrath  <roland@baalperazim.frob.com>

	* main.c (main): Remove commented-out wire_task_self call, #include.

1999-06-05  Roland McGrath  <roland@baalperazim.frob.com>

	* mgt.c (create_startup_proc): Don't call add_proc_to_hash here.
	* main.c (main): Do it here instead, after we have the task port.

1999-06-04  Roland McGrath  <roland@baalperazim.frob.com>

	* proc.h (struct proc): Use unsigned int for flag bitfields.

	* mgt.c (allocate_proc, complete_proc): New functions, broken
	out of new_proc.  Remove magic handling of PIDs 0 and 1.
	(new_proc): Now just call those two.  Made static.
	(create_startup_proc): New function, also broken out of old new_proc.
	Do special setup for PID 1 (init) proc structure here.
	* proc.h: Update decls.
	* main.c (main): Use create_startup_proc for startup_proc, and
	allocate_proc + complete_proc (with PID 0) for self_proc.

	* mgt.c (make_ids): Add const to arguments.

1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>

	* mgt.c (add_tasks): Skip invalid (null) rights in tasks array.
	* info.c (S_proc_pid2task): Add assert for p_task right validity.
