@@ -1,3 +1,8 @@
+2000-01-06  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* primes.c: File removed (long obsolete).
+	* proc.h: Don't declare nextprime.
+
 1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* proc.h: Add #include <sys/mman.h>.
